# IT-school

task_1/: CMakeLists.txt  README.md  certificate.pem  fingerprint.cpp  fingerprint.h  main.cpp  task_1.cpp
task_2/: README.md
task_2/reader/: CMakeLists.txt  main.cpp
task_2/writer/: CMakeLists.txt  main.cpp
